--- a/exercicios/eventos.html
+++ b/exercicios/eventos.html
@@ -7,9 +7,44 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
+    <div id="app">
+        {{ contador }}
+        <p>
+            <button v-on:click="add">+1</button>
 
+            <!-- forma reduzida do v-on: -->
+            <button @click="contador -= 2">-2</button>
+        </p>
+
+        <p @mousemove="atualizarPosicao">
+            Coordenadas: {{ x }} e {{ y }}
+            <span @mousemove.stop>Zona neutra</span>
+        </p>
+
+        <input type="text" @keyup.enter="alerta">
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                x: 0,
+                y: 0,
+                contador: 0
+            },
+            methods: {
+                add() {
+                    this.contador++
+                },
+
+                atualizarPosicao(e) {
+                    this.x = e.clientX
+                    this.y = e.clientY
+                },
+                alerta() {
+                    alert('Enter!')
+                }
+            }
+        })
     </script>
 </body>
 </html>
