--- a/exercicios/template.html
+++ b/exercicios/template.html
@@ -7,9 +7,25 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-    
+    <div id="app"></div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                titulo: "VueJS",
+                subtitulo: "Framework Progressivo"
+            },
+
+            // não gera problema sem a div, igual ao React
+            // mas só renderiza o primeiro elemento <h1>
+            // também pode usar a tag <fragment>
+            template: `
+                <div>
+                    <h1>{{ titulo }} </h1>
+                    <h3>{{ subtitulo }} </h3>
+                </div>
+            `
+        })
     </script>
 </body>
 </html>
